# real-time-order-processing-system

./: Basic Kafka Commands.md  ReadMe.md  docker-compose.yml
order-service/: .gitignore  pyproject.toml
order-service/app/: consumer.py  database.py  main.py  models.py  producer.py  routes.py
payment-service/: .gitignore  pyproject.toml
payment-service/app/: consumer.py  database.py  init_db.py  main.py  models.py  producer.py  routes.py
